force-app/main/default/objects/Goal_Period__c.object
<CustomObject>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Run_Date__c</fullName>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Goal Period</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Goal Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>